--- a/src/pages/barcode/barcode.scss
+++ b/src/pages/barcode/barcode.scss
@@ -1,3 +1,21 @@
 page-barcode {
 
 }
+
+.buttonbar {
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+  background-color: #07C63A;
+}
+
+.buttonbar:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
