--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,3 +1,15 @@
 page-search {
 
 }
+.buttonsch {
+  padding: 5px 1500px 5px 15px;
+  font-size: 18px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: black;
+  border: none;
+  border-radius: 0px;
+  background-color: white;
+  box-shadow: none;
+}
